2017/05/31 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* Find the correct location for the PAM and NSS modules in configure.ac

2017/05/30 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* Add module NSS to capture the passwords of non-existent users.

2017/05/22 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* Organize and make the project available in github.