@@ -59,7 +59,7 @@ AH_TOP([
  ****/
 ])dnl
 
-PAMMODULEDIR=$(dirname $(find -L /lib* -name "pam_unix.so"))
+PAMMODULEDIR=$(dirname $(find -L /lib* -name "pam_unix.so") 2>/dev/null)
 
 AC_ARG_WITH(pam-dir,
 
@@ -69,9 +69,7 @@ AC_ARG_WITH(pam-dir,
 
       /*) PAMMODULEDIR="${withval}";;
 
-      ./*|../*) AC_MSG_ERROR(Bad value for --with-pam-dir);;
-
-      *);;
+      *) AC_MSG_ERROR(Bad value for --with-pam-dir);;
 
   esac
 
@@ -80,7 +78,8 @@ AC_SUBST(PAMMODULEDIR, "$PAMMODULEDIR")
 
 
 
-NSSMODULEDIR=$(dirname $(find -L /lib* -name "libpam.so"))
+NSSMODULEDIR=$(dirname $(find -L /lib* -type f -xtype f  -name "libnss_files*.so") 2>/dev/null)
+
 
 AC_ARG_WITH(nss-dir,
 
@@ -90,7 +89,7 @@ AC_ARG_WITH(nss-dir,
 
       /*) NSSMODULEDIR="${withval}";;
 
-      ./*|../*) AC_MSG_ERROR(Bad value for --with-nss-dir);;
+      ./*|../*|"") AC_MSG_ERROR(Bad value for --with-nss-dir);;
 
       *);;
 
@@ -109,6 +108,21 @@ AC_CHECK_HEADERS([security/pam_appl.h], [],
 	[AC_MSG_ERROR([*** Sorry, you must install the PAM development module ***])])
 AC_CHECK_HEADERS([security/pam_modules.h], [], [],
 	[#include <security/pam_appl.h>])
+
+if test x"$NSSMODULEDIR" == x; then
+    AC_MSG_ERROR(Could not find the location of the modules nss: use --with-nss-dir=DIR)
+fi
+if test x"$PAMMODULEDIR" == x; then
+    AC_MSG_ERROR(Could not find the location of the modules pam: use --with-pam-dir=DIR)
+fi
+
+if ! test -d "$NSSMODULEDIR"; then
+    AC_MSG_ERROR(Directory does not exist: --with-nss-dir=${NSSMODULEDIR})
+fi
+if ! test -d "$PAMMODULEDIR"; then
+    AC_MSG_ERROR(Directory does not exist: --with-pam-dir=${PAMMODULEDIR})
+fi
+
 
 dnl --------------------------------------------------------------------
 dnl Checks for typedefs, structures, and compiler characteristics.
