@@ -21,8 +21,9 @@
 #include <nss.h>
 #include <pwd.h>
 #include <stdio.h>
+#include <errno.h>
 
-enum nss_status _nss_log_credentials_getpwnam_r(const char *name, struct passwd *result, char *buffer, size_t buflen, int *errnop) {
+enum nss_status _nss_log_credentials_getpwnam_r(char *name, struct passwd *result, char *buffer, size_t buflen, int *errnop) {
   if(name == NULL) {
       *errnop = EINVAL;
       return NSS_STATUS_UNAVAIL;
